[package]
name = "cant-touch-this"
version = "0.0.1"
authors = [
    "Nathan Bakhuijzen <nathanbakhuijzen@gmail.com>",
    "Tim Visée <timvisee@gmail.com>",
]

[features]
default = []

# Include a web configuration utility
web = []

[dependencies]
leap = { git = "https://github.com/timvisee/leap-rs.git", rev = "3205901", version = "0.1.0" }
nalgebra = "0.16"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"

[dependencies.rocket]
version = "0.4.0-dev"
git = "https://github.com/SergioBenitez/Rocket"
rev = "633d37b"

[dependencies.rocket_codegen]
version = "0.4.0-dev"
git = "https://github.com/SergioBenitez/Rocket"
rev = "633d37b"

[dependencies.rocket_contrib]
version = "0.4.0-dev"
git = "https://github.com/SergioBenitez/Rocket"
rev = "633d37b"
default_features = false
features = ["handlebars_templates"]

[dev-dependencies]
pretty_assertions = "0.5"
