[package]
name = "cant-touch-this"
version = "0.0.1"
authors = [
    "Nathan Bakhuijzen <nathanbakhuijzen@gmail.com>",
    "Tim Visée <timvisee@gmail.com>",
]

[features]
default = ["web"]

# Include a web configuration utility
web = []

[dependencies]
clap = "2.32"
itertools = "0.7"
leap = "0.1.0"
nalgebra = "0.16"
rayon = "1.0"
rocket = "0.4.0-dev"
rocket_codegen = "0.4.0-dev"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
webbrowser = "0.3"

[dependencies.rocket_contrib]
version = "0.4.0-dev"
default_features = false
features = ["handlebars_templates", "static_files", "json"]

[patch.crates-io.leap]
git = "https://github.com/timvisee/leap-rs.git"
rev = "3205901"

[patch.crates-io.rocket]
git = "https://github.com/SergioBenitez/Rocket"
rev = "cee2f44"

[patch.crates-io.rocket_codegen]
git = "https://github.com/SergioBenitez/Rocket"
rev = "cee2f44"

[patch.crates-io.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
rev = "cee2f44"

[dev-dependencies]
pretty_assertions = "0.5"
